@@ -20,7 +20,7 @@
     <releaseinfo>
       for libags_audio.
       The latest version of this documentation can be found on-line at
-      <ulink role="online-location" url="http://nongnu.org/gsequencer/libags_audio/index.html">http://nongnu.org/gsequencer/libags_audio/</ulink>.
+      <ulink role="online-location" url="http://nongnu.org/gsequencer/api/libags_audio/index.html">http://nongnu.org/gsequencer/api/libags_audio/</ulink>.
     </releaseinfo>
   </bookinfo>
 
